<resources>
    <string name="app_name">ZeeChat</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User name</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="post">post</string>
    <string name="edit_profile">Edit Profile</string>

    <string name="notifications">Notifications</string>
    <string name="change_image">Change Image</string>

    <string name="delete_account">Delete Account</string>
    <string name="logout">Logout</string>
    <string name="biography">Bio</string>
    <string name="password">password</string>
    <string name="email">Email</string>
    <string name="new_account">New Account</string>
    <string name="new_account_sign_up">New_account? Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_signin">Already have an Account? SignIn</string>
    <string name="full_name">Full Name</string>
    <string name="user_profile_name">User Profile name</string>
    <string name="follow">Follow</string>
    <string name="say_somethin_about_your_post">Say Somethin about Your Post</string>
    <string name="comments">Comments</string>
    <string name="write_your_comment">Write Your Comment</string>
    <string name="publich">Publich</string>
</resources>
