<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".SignUpActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:src="@drawable/zeem"
        android:scaleType="centerCrop"

        android:layout_marginBottom="1dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:id="@+id/logo"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/logo"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"
        android:id="@+id/fullname_signup"
        android:hint="@string/full_name"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/fullname_signup"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"
        android:id="@+id/username_signup"
        android:hint="User Name"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/username_signup"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"
        android:id="@+id/email_signup"
        android:hint="@string/email"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/email_signup"
        android:layout_marginTop="6dp"
        android:inputType="textPassword"
        android:id="@+id/password_signup"
        android:hint="@string/password"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_signup"
        android:id="@+id/signup_btn"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@android:color/white"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="@android:color/black"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/signin_link_btn"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorAccent"
        android:text="@string/already_have_an_account_signin"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="@android:color/white"/>


</RelativeLayout>