<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">


        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/profile"
            android:layout_centerHorizontal="true"
            android:padding="5dp"
            android:layout_marginTop="10dp"

            android:id="@+id/user_profile_image_search"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:layout_below="@+id/user_profile_image_search"
            android:gravity="center"
            android:textSize="12dp"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="5dp"
            android:id="@+id/user_name_search"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_profile_name"
            android:layout_below="@+id/user_name_search"
            android:gravity="center"
            android:textSize="12dp"
            android:layout_marginTop="2dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:id="@+id/user_full_name_search"/>

            <Button
                android:id="@+id/follow_btn_search"
                android:layout_width="110dp"
                android:layout_height="40dp"

                android:layout_below="@+id/user_full_name_search"
               android:layout_marginStart="80dp"
                android:layout_marginBottom="3dp"
                android:layout_centerHorizontal="true"

                android:text="@string/follow"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="12dp" />

</RelativeLayout>