<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Fragments.ProfileFragment">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:id="@+id/app_bar_layout_profile_frag">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/white"

            android:id="@+id/profile_toolbar">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:maxLines="1"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:layout_centerVertical="true"
                    android:id="@+id/profile_fragment_username"
                    android:text="@string/user_name"/>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/option_view"
                    android:src="@drawable/option"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>


            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:id="@+id/scroll_view"
        android:layout_below="@id/app_bar_layout_profile_frag"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:id="@+id/top_bar"
                android:padding="16dp"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_margin="4dp"
                    android:id="@+id/pro_image_profile_frag"
                    android:src="@drawable/profile"/>

                <LinearLayout
                    android:layout_width="190dp"
                    android:layout_height="90dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"

                            android:baselineAligned="false"
                            android:gravity="center"
                            android:orientation="vertical">


                            <TextView
                                android:id="@+id/total_post"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="0"
                                android:textColor="@android:color/black"
                                android:textSize="12dp"
                                android:textStyle="bold" />


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/post"
                                android:textColor="@android:color/black"

                                android:textSize="12dp" />


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_marginLeft="3dp"
                            android:gravity="center"
                            android:orientation="vertical">


                            <TextView
                                android:id="@+id/total_followers"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="0"
                                android:textColor="@android:color/black"
                                android:textSize="12dp"
                                android:textStyle="bold" />


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/followers"
                                android:textColor="@android:color/black"

                                android:textSize="12dp" />


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:gravity="center"

                            android:orientation="vertical">


                            <TextView
                                android:id="@+id/total_following"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="0"
                                android:textColor="@android:color/black"
                                android:textSize="12dp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/following"
                                android:textColor="@android:color/black"


                                android:textSize="10dp" />


                        </LinearLayout>


                    </LinearLayout>

                    <Button
                        android:layout_width="170dp"
                        android:layout_height="32dp"
                        android:text="@string/edit_profile"
                        android:textAllCaps="false"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/back"
                        android:id="@+id/edit_account_setting_btn"/>

                    </LinearLayout>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/mid_bar"
                android:padding="12dp">



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_name"
                    android:textSize="13dp"
                    android:textStyle="bold"
                    android:layout_margin="10dp"
                    android:textColor="@android:color/black"
                    android:id="@+id/full_name_profile_frag"/>

                <TextView
                    android:id="@+id/bio_profile_frag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="7dp"
                    android:text="@string/biography"
                    android:textColor="@android:color/black"

                    android:textSize="13dp" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_grid_"
                    android:layout_weight="1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/images_grid_views_btn"/>


                <ImageButton
                    android:layout_width="1dp"
                    android:layout_height="48dp"
                    android:src="@drawable/savelarge"
                    android:scaleType="fitCenter"
                    android:layout_weight="1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/images_save_btn"/>




            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</RelativeLayout>
