<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CommentsActivity2">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:id="@+id/app_bar_layout_comments">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:id="@+id/comments_toolbar">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comments"
                    android:textSize="18sp"
                    android:maxLines="1"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:layout_centerVertical="true"/>





            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/post_image_comment"
        android:scaleType="centerCrop"
        android:src="@drawable/profile"
        android:layout_below="@+id/app_bar_layout_comments"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recyclerView_comments"
        android:layout_below="@+id/post_image_comment"
        android:layout_margin="5dp"
        android:layout_above="@+id/commentRelative"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/commentRelative"
        android:padding="4dp"
        android:layout_marginBottom="5dp"
        android:layout_alignParentBottom="true"
        android:background="#fff">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="2dp"
            android:src="@drawable/profile"
            android:id="@+id/profile_image_comment"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_comment"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"

            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_toLeftOf="@+id/post_comment"
            android:layout_toRightOf="@+id/profile_image_comment"
            android:hint="@string/write_your_comment"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/post_comment"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:text="@string/publich"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textSize="14sp"
            android:layout_marginEnd="6dp"/>


    </RelativeLayout>

</RelativeLayout>